--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^7.1.6"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "bootstrap": "^5.3.8",
     "d3-geo": "^3.1.1",
     "d3-scale": "^4.0.2",
@@ -27,6 +28,7 @@
     "react-simple-maps": "^3.0.0",
     "react-tooltip": "^5.30.0",
     "recharts": "^3.2.1",
-    "topojson-client": "^3.1.0"
+    "topojson-client": "^3.1.0",
+    "xlsx": "^0.18.5"
   }
 }
